app/assets/stylesheets/ihover_override.css.scss
.ih-item.circle {
  position: relative;
  width: 130px;
  height: 130px;
  border-radius: 50%;
  margin: 0 auto;
}
.ih-item.circle .img {
  position: relative;
  width: 130px;
  height: 130px;
  border-radius: 50%;
  background-color: white;
  img {
    transform: scale(0.7,0.7);
    -moz-transform: scale(0.7,0.7);
    -webkit-transform: scale(0.7,0.7);
    -o-transform: scale(0.7,0.7);
  }
}

.ih-item.circle.effect4 .info h3 {
  font-size: 14px;
  margin: 0 15px;
  height: 70px;
  padding-top: 35px;
}

